logica implementada para tipo de producto
